Refactor bindings